openwhisk/docker/gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: DEFAULT
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    # gateway controller will use this label to match with it's own version
    # do not remove
    argo-events-gateway-version: v0.11
spec:
  type: "webhook"
  eventSource: "DEFAULT"
  processorPort: "9330"
  eventProtocol:
    type: "HTTP"
    http:
      port: "9300"
  template:
    metadata:
      name: "DEFAULT"
      labels:
        gateway-name: "DEFAULT"
    spec:
      containers:
        - name: "gateway-client"
          image: "argoproj/gateway-client:v0.11"
          imagePullPolicy: "Always"
          command: ["/bin/gateway-client"]
        - name: "webhook-events"
          image: "argoproj/webhook-gateway:v0.11"
          imagePullPolicy: "Always"
          command: ["/bin/webhook-gateway"]
      serviceAccountName: "argo-events-sa"
  service:
    metadata:
      name: DEFAULT
    spec:
      selector:
        gateway-name: "DEFAULT"
      ports:
        - port: 12000
          targetPort: 12000
      type: LoadBalancer
  watchers:
    sensors:
      - name: "DEFAULT"
